<resources>
    <string name="app_name">Eco</string>
    <string name="title_text">ecological living</string>
    <string name="desc_eco_icon">Eco Logo</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_out">Signed out</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_add_item">AddItemActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Display titles for the sections/fragments -->
    <string name="title_ecological_awareness">Ecological Awareness</string>
    <string name="title_events">Events</string>
    <string name="title_stories">Stories</string>
    <string name="title_discussion">Discussion</string>
    <string name="title_petitions">Petitions</string>

    <!-- names for the options in the HomeActivity's action menu -->
    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign Out</string>

    <!-- Code/logical titles for the sections to be used in the app and database -->
    <string name="section_ecological_awareness">ecological_awareness</string>
    <string name="section_events">events</string>
    <string name="section_stories">stories</string>
    <string name="section_discussion">discussion</string>
    <string name="section_petitions">petitions</string>

    <!-- db path for the users table -->
    <string name="db_users">users</string>

    <!-- Input prompts and buttons for the AddItemActivity -->
    <string name="author_header">Author</string>
    <string name="time_header">Date</string>
    <string name="title_input_header">Title</string>
    <string name="content_input_header">Content</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="no_data_input">Must enter title and content to save</string>
    <string name="db_insertion_successful">Post published successfully</string>

    <!-- SettingsActivity -->
    <string name="settings_activity_header">Settings</string>
    <string name="settings_activity_name">Display Name</string>
    <string name="settings_activity_real_name">Name</string>
    <string name="settings_activity_email">Email</string>
    <string name="settings_activity_photo">Profile Picture</string>
    <string name="save_and_continue">Save and Continue</string>
    <string name="edit">Edit</string>
    <string name="no_name_input_revert_to_previous">No name was entered so reverted changes</string>
    <string name="name_changed">Display name has been changed</string>

</resources>
