<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_settings_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settings_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/title_settings_activity"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:fontFamily="@font/nova_oval"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_settings_activity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_settings_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_big"
                android:layout_marginTop="@dimen/margin_big"
                android:layout_marginEnd="@dimen/margin_big"
                android:layout_marginBottom="@dimen/margin_big"
                android:contentDescription="@string/settings_activity_photo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_medium"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_big"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:text="@string/settings_activity_real_name"
                    android:textColor="#FF000000"
                    android:textSize="16sp"
                    android:labelFor="@+id/name_settings_activity"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/real_name_settings_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_big"
                    android:textColor="#FF000000"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_big"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_big"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:text="@string/settings_activity_email"
                    android:textColor="#FF000000"
                    android:textSize="16sp"
                    android:labelFor="@+id/name_settings_activity"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/email_settings_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_big"
                    android:textColor="#FF000000"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/margin_big"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_big"
                android:layout_marginBottom="@dimen/margin_medium"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_big"
                android:layout_marginBottom="@dimen/margin_medium"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_big"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:labelFor="@+id/name_settings_activity"
                    android:text="@string/settings_activity_name"
                    android:textColor="#FF000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/name_settings_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_big"
                    android:autofillHints="@string/settings_activity_name"
                    android:backgroundTint="#CC7BE099"
                    android:singleLine="true"
                    android:textColor="#FF000000"
                    android:textCursorDrawable="@drawable/custom_cursor"
                    android:textSize="16sp" />

            </LinearLayout>

            <Button
                android:id="@+id/edit_button_settings_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin_big"
                android:paddingEnd="@dimen/margin_big"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_big"
                android:layout_marginBottom="@dimen/margin_big"
                android:background="@color/colorPrimary"
                android:onClick="editClick"
                android:text="@string/edit"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/save_and_continue_button_settings_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin_big"
                android:paddingEnd="@dimen/margin_big"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_big"
                android:layout_marginBottom="@dimen/margin_big"
                android:background="@color/colorPrimary"
                android:onClick="saveAndContinueClick"
                android:text="@string/save_and_continue"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>