<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".AddItemActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_add_item_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_add_item_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/title_add_item_activity"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:fontFamily="@font/nova_oval"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_add_item_activity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_header_add_item_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_big"
                android:layout_marginTop="@dimen/margin_big"
                android:layout_marginEnd="@dimen/margin_big"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="@string/title_input_header"
                android:textColor="#FF000000"
                android:textSize="16sp"
                android:labelFor="@+id/title_input_add_item_activity"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/title_input_add_item_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_big"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_big"
                android:layout_marginBottom="@dimen/margin_big"
                android:autofillHints="@string/title_input_header"
                android:backgroundTint="#CC7BE099"
                android:ellipsize="middle"
                android:inputType="textAutoCorrect|textMultiLine"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:textColor="#FF000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/content_header_add_item_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_big"
                android:layout_marginTop="@dimen/margin_big"
                android:layout_marginEnd="@dimen/margin_big"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="@string/content_input_header"
                android:textColor="#FF000000"
                android:textSize="16sp"
                android:labelFor="@+id/content_input_add_item_activity"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/content_input_add_item_activity"
                android:backgroundTint="#CC7BE099"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_big"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_big"
                android:layout_marginBottom="@dimen/margin_medium"
                android:autofillHints="@string/content_input_header"
                android:inputType="textAutoCorrect|textMultiLine"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:textColor="#FF000000"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_huge"
                android:layout_marginBottom="@dimen/margin_huge"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/cancel_button_add_item_activity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.50"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/cancel_button"
                    android:onClick="cancelButtonClick"
                    android:src="@drawable/round_cancel_black_24dp" />

                <ImageButton
                    android:id="@+id/save_button_add_item_activity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.50"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/save_button"
                    android:onClick="saveButtonClick"
                    android:src="@drawable/round_save_black_24dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>